--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,14 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+    reports {
+        junitXml.enabled = true
+        html.enabled = false
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
