--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
+    implementation 'org.postgresql:postgresql:42.2.5'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     runtime 'com.h2database:h2'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
