--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'org.postgresql:postgresql:42.2.5'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    compile 'org.flywaydb:flyway-core'
     runtime 'com.h2database:h2'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: "junit", module: "junit"
