--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,7 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: create
-    properties:
-      javax:
-        persistence:
-          schema-generation:
-            create-source: metadata
-            scripts:
-              action: create
-              create-target: create.sql
+      ddl-auto: validate
 
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
