--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,17 @@ repositories {
     mavenCentral()
 }
 
+test{ 
+    systemProperty 'spring.profiles.active', 'test'
+}
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
-    implementation 'org.postgresql:postgresql:42.2.5'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    compile 'org.postgresql:postgresql:42.2.5'
     compile 'org.flywaydb:flyway-core'
-    runtime 'com.h2database:h2'
+    compile 'com.h2database:h2'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: "junit", module: "junit"
     }
