--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ test{
     }
 }
 
+build.dependsOn jacocoTestReport
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
