Add support to heroku deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,22 +9,13 @@ build:
     reports:
       junit: build/test-results/test/TEST-*.xml
 
-
-code_quality:
-  image: docker:stable
-  variables:
-    DOCKER_DRIVER: overlay2
-  allow_failure: true
-  services:
-    - docker:stable-dind
+heroku-deploy:
+  stage: deploy
+  image: ruby:latest
   script:
-    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
-    - docker run
-      --env SOURCE_CODE="$PWD"
-      --volume "$PWD":/code
-      --volume /var/run/docker.sock:/var/run/docker.sock
-      "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" /code
-  artifacts:
-    expire_in: 1 week
-    reports:
-      codequality: gl-code-quality-report.json
+    - apt-get update -qy
+    - apt-get install -y ruby-dev
+    - gem install dpl
+    - dpl --provider=heroku --app=pathashala-wallet-service --api-key=da6e1724-a2df-44dc-aa03-926befa923ec
+  only:
+    - master
