--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: gradle:5.3.0-jdk11
 
 build:
-  stage: build
+  stage: test
   script:
     - gradle build
   artifacts:
@@ -9,7 +9,8 @@ build:
     reports:
       junit: build/test-results/test/TEST-*.xml
 
-heroku-deploy:
+
+prod-deploy:
   stage: deploy
   image: ruby:latest
   script:
