Add logstash friendly logging

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: psql123
 logging:
   level:
-    root: TRACE
+    root: INFO
