--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'net.logstash.logback:logstash-logback-encoder:5.3'
     compile 'org.postgresql:postgresql:42.2.5'
     compile 'org.flywaydb:flyway-core'
     compile 'com.h2database:h2'
