--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
 HELP.md
 .gradle
 /build/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+/logs/
 
 ### IntelliJ IDEA ###
 .idea
