--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ build.dependsOn jacocoTestCoverageVerification
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation "org.springframework.boot:spring-boot-starter-security"
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     implementation 'net.logstash.logback:logstash-logback-encoder:5.3'
@@ -47,6 +48,7 @@ dependencies {
     }
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 jacocoTestCoverageVerification {
