Add. Run app with default spring profile 'dev' 	- Change db to use postgres pass in dev

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ jacocoTestReport {
     }
 }
 
+bootRun {
+    bootRun.systemProperty 'spring.profiles.active', "${springProfile}"
+}
+
 test{
     systemProperty 'spring.profiles.active', 'test'
     useJUnitPlatform()
