--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ sourceCompatibility = '11'
 repositories {
     mavenCentral()
 }
+jar {
+    manifest {
+        attributes 'Main-Class': 'com/tw/pathashala/api/Application.java'
+    }
+}
 
 jacocoTestReport {
     reports {
