--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:13-ea-jdk-alpine
 VOLUME /tmp
-COPY build/libs/wallet-service-0.0.1-SNAPSHOT.jar app.jar
+ADD ../build/libs/wallet-service-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+
